--- a/euangelium/hijo.html
+++ b/euangelium/hijo.html
@@ -24,177 +24,177 @@
     INTRODUCCIÓN <br>
     Desarrollo del tema <br>
     Los textos <br>
-     Gál 3:19 Entonces, ¿para qué la ley? Fue añadida en razón de las transgresiones hasta que llegase la descendencia,
+    Gál 3:19 Entonces, ¿para qué la ley? Fue añadida en razón de las transgresiones hasta que llegase la descendencia,
     a
     quien iba destinada la promesa, promulgada por los ángeles y con la intervención de un mediador. <br>
-     Gál 3:20 Ahora bien, cuando actúa uno solo, no hay mediador, y Dios es uno solo. <br>
-     1Ti 2:5 Porque hay un solo Dios, y también un solo mediador entre Dios y los hombres , Cristo Jesús, hombre
+    Gál 3:20 Ahora bien, cuando actúa uno solo, no hay mediador, y Dios es uno solo. <br>
+    1Ti 2:5 Porque hay un solo Dios, y también un solo mediador entre Dios y los hombres , Cristo Jesús, hombre
     también,
     <br>
-     Heb 8:6 Ahora bien, él ha obtenido un ministerio tanto mejor cuanto es mediador de una alianza mejor, como fundada
+    Heb 8:6 Ahora bien, él ha obtenido un ministerio tanto mejor cuanto es mediador de una alianza mejor, como fundada
     en
     promesas mejores. <br>
-     Heb 9:15 Por eso es mediador de una nueva alianza; para que, interviniendo una muerte que libera de las
+    Heb 9:15 Por eso es mediador de una nueva alianza; para que, interviniendo una muerte que libera de las
     transgresiones
     de la primera alianza, reciban, los llamados, la herencia eterna prometida. <br>
-     Heb 12:24 y a Jesús, mediador de una nueva alianza, y a la aspersión purificadora de una sangre que habla más
+    Heb 12:24 y a Jesús, mediador de una nueva alianza, y a la aspersión purificadora de una sangre que habla más
     fuerte
     que la de Abel. <br>
     <br>
     <br>
     <br>
-     Que se entiende por mediador <br>
-     En el 2,6 no va indicando quien es un mediador. <br>
-     1Ti 2:6 que se entregó a sí mismo como rescate por todos. Tal es el testimonio dado en el tiempo oportuno, <br>
-     <br>
+    Que se entiende por mediador <br>
+    En el 2,6 no va indicando quien es un mediador. <br>
+    1Ti 2:6 que se entregó a sí mismo como rescate por todos. Tal es el testimonio dado en el tiempo oportuno, <br>
     <br>
     <br>
     <br>
-     Podemos orar unos por otros <br>
-     Efe 6:18 siempre en oración y súplica, orando en toda ocasión en el Espíritu, velando juntos con perseverancia e
+    <br>
+    Podemos orar unos por otros <br>
+    Efe 6:18 siempre en oración y súplica, orando en toda ocasión en el Espíritu, velando juntos con perseverancia e
     intercediendo por todos los santos, <br>
     <br>
-     Mucho se lograría si se lee el texto desde 1Tim 2,1-6. Veríamos que si es posible interceder unos por otros. Aún
+    Mucho se lograría si se lee el texto desde 1Tim 2,1-6. Veríamos que si es posible interceder unos por otros. Aún
     más,
     los cristianos debemos pedir por los no creyentes. <br>
-     Es siempre Dios quien hace el milagro, y se vale de personas aún que no estén presentes lo vemos en <br>
-     Hch 19:11 Dios obraba por medio de Pablo milagros no comunes, <br>
-     Hch 19:12 de forma que bastaba aplicar a los enfermos los pañuelos o mandiles que había usado y se alejaban de
+    Es siempre Dios quien hace el milagro, y se vale de personas aún que no estén presentes lo vemos en <br>
+    Hch 19:11 Dios obraba por medio de Pablo milagros no comunes, <br>
+    Hch 19:12 de forma que bastaba aplicar a los enfermos los pañuelos o mandiles que había usado y se alejaban de
     ellos
     las enfermedades y salían los espíritus malos. <br>
-     2Re 13:20 Eliseo murió y lo enterraron. Bandas de moabitas penetraban en el país al inicio de cada año. <br>
-     2Re 13:21 En una ocasión estaban unos enterrando a un hombre y, al avistar la banda, lo arrojaron en la tumba de
+    2Re 13:20 Eliseo murió y lo enterraron. Bandas de moabitas penetraban en el país al inicio de cada año. <br>
+    2Re 13:21 En una ocasión estaban unos enterrando a un hombre y, al avistar la banda, lo arrojaron en la tumba de
     Eliseo y huyeron. El hombre entró en contacto con los huesos de Eliseo, cobró vida y se puso en pie. <br>
     <br>
-     Los que están con el Señor están dormidos <br>
+    Los que están con el Señor están dormidos <br>
     Concepto de alma ψυχην ΨΥΧΗΝ <br>
-     Puede referirse a la vida humana <br>
-     Mat 16:25 Porque quien quiera salvar su vida, la perderá, pero quien pierda su vida por mí, la encontrará. <br>
-     Jua 15:13 Nadie tiene mayor amor <br>
-     que el que da su vida por sus amigos. <br>
-     Toda la persona humana <br>
-     Hch 2:41 Así pues, los que acogieron su palabra fueron bautizados. Y aquel día se les unieron unas tres mil
+    Puede referirse a la vida humana <br>
+    Mat 16:25 Porque quien quiera salvar su vida, la perderá, pero quien pierda su vida por mí, la encontrará. <br>
+    Jua 15:13 Nadie tiene mayor amor <br>
+    que el que da su vida por sus amigos. <br>
+    Toda la persona humana <br>
+    Hch 2:41 Así pues, los que acogieron su palabra fueron bautizados. Y aquel día se les unieron unas tres mil
     personas.
     <br>
-     Lo intimo <br>
-     Mat 26:38 Entonces les dice: «Mi alma está triste hasta el punto de morir; quedaos aquí y velad conmigo.» <br>
-     Jua 12:27 Ahora mi alma está turbada. <br>
-     Y ¿qué voy a decir? ¡Padre, líbrame de esta hora! Pero ¡si he llegado a esta hora para esto! <br>
-     Lo más valioso <br>
-     Mat 10:28 «Y no temáis a los que matan el cuerpo, pero no pueden matar el alma; temed más bien al que puede llevar
+    Lo intimo <br>
+    Mat 26:38 Entonces les dice: «Mi alma está triste hasta el punto de morir; quedaos aquí y velad conmigo.» <br>
+    Jua 12:27 Ahora mi alma está turbada. <br>
+    Y ¿qué voy a decir? ¡Padre, líbrame de esta hora! Pero ¡si he llegado a esta hora para esto! <br>
+    Lo más valioso <br>
+    Mat 10:28 «Y no temáis a los que matan el cuerpo, pero no pueden matar el alma; temed más bien al que puede llevar
     a
     la perdición alma y cuerpo en la gehenna. <br>
     <br>
     Las objeciones <br>
-     Ecl 9:5 Los vivos saben que han de morir, pero los muertos no saben nada, y no hay ya paga para ellos, pues se
+    Ecl 9:5 Los vivos saben que han de morir, pero los muertos no saben nada, y no hay ya paga para ellos, pues se
     perdió
     su memoria. <br>
-     Ecl 9:6 Se acabaron hace tiempo su amor, su odio y sus celos, y no tomarán parte nunca jamás en todo lo que pasa
+    Ecl 9:6 Se acabaron hace tiempo su amor, su odio y sus celos, y no tomarán parte nunca jamás en todo lo que pasa
     bajo
     el sol. <br>
     <br>
-     Los muertos y los vivos en la Venida del Señor. <br>
-     1Ts 4:13 Hermanos, no queremos que estéis en la ignorancia respecto de los muertos, para que no os entristezcáis
+    Los muertos y los vivos en la Venida del Señor. <br>
+    1Ts 4:13 Hermanos, no queremos que estéis en la ignorancia respecto de los muertos, para que no os entristezcáis
     como
     los demás, que no tienen esperanza. <br>
-     1Ts 4:14 Porque si creemos que Jesús murió y que resucitó, de la misma manera Dios llevará consigo a quienes
+    1Ts 4:14 Porque si creemos que Jesús murió y que resucitó, de la misma manera Dios llevará consigo a quienes
     murieron
     en Jesús. <br>
-     <br>
+    <br>
     <br>
     No se tiene en cuenta: <br>
-     Ecl 12:7 y vuelva el polvo a la tierra, a lo que fue, y el espíritu vuelva a Dios, que lo dio. <br>
-     Gén 35:19 Murió Raquel y fue sepultada en el camino de Efratá, o sea Belén. <br>
-     Mat 10:28 «Y no temáis a los que matan el cuerpo, pero no pueden matar el alma; temed más bien al que puede llevar
+    Ecl 12:7 y vuelva el polvo a la tierra, a lo que fue, y el espíritu vuelva a Dios, que lo dio. <br>
+    Gén 35:19 Murió Raquel y fue sepultada en el camino de Efratá, o sea Belén. <br>
+    Mat 10:28 «Y no temáis a los que matan el cuerpo, pero no pueden matar el alma; temed más bien al que puede llevar
     a
     la perdición alma y cuerpo en la gehenna. <br>
     <br>
     Una parábola es una comparación donde a través de cosas conocidas se quiere transmitir algo desconocido, no es a la
     inversa. <br>
-     Luc 16:19 «Había un hombre rico que vestía de púrpura y lino, y celebraba todos los días espléndidas fiestas. <br>
-     Luc 16:20 Y uno pobre, llamado Lázaro, que, echado junto a su portal, cubierto de llagas, <br>
-     Luc 16:21 deseaba hartarse de lo que caía de la mesa del rico...pero hasta los perros venían y le lamían las
+    Luc 16:19 «Había un hombre rico que vestía de púrpura y lino, y celebraba todos los días espléndidas fiestas. <br>
+    Luc 16:20 Y uno pobre, llamado Lázaro, que, echado junto a su portal, cubierto de llagas, <br>
+    Luc 16:21 deseaba hartarse de lo que caía de la mesa del rico...pero hasta los perros venían y le lamían las
     llagas.
     <br>
-     Luc 16:22 Sucedió, pues, que murió el pobre y los ángeles le llevaron al seno de Abrahán. Murió también el rico y
+    Luc 16:22 Sucedió, pues, que murió el pobre y los ángeles le llevaron al seno de Abrahán. Murió también el rico y
     fue
     sepultado. <br>
-     Luc 16:23 «Estando en el Hades entre tormentos, levantó los ojos y vio a lo lejos a Abrahán, y a Lázaro en su
+    Luc 16:23 «Estando en el Hades entre tormentos, levantó los ojos y vio a lo lejos a Abrahán, y a Lázaro en su
     seno.
     <br>
-     Luc 16:24 Y, gritando, dijo: “Padre Abrahán, ten compasión de mí y envía a Lázaro a que moje en agua la punta de
+    Luc 16:24 Y, gritando, dijo: “Padre Abrahán, ten compasión de mí y envía a Lázaro a que moje en agua la punta de
     su
     dedo y refresque mi lengua, porque estoy atormentado en esta llama.” <br>
-     Luc 16:25 Pero Abrahán le dijo: “Hijo, recuerda que recibiste tus bienes durante tu vida y Lázaro, al contrario,
+    Luc 16:25 Pero Abrahán le dijo: “Hijo, recuerda que recibiste tus bienes durante tu vida y Lázaro, al contrario,
     sus
     males; ahora, pues, él es aquí consolado y tú atormentado. <br>
-     Luc 16:26 Y además, entre nosotros y vosotros se interpone un gran abismo, de modo que los que quieran pasar de
+    Luc 16:26 Y además, entre nosotros y vosotros se interpone un gran abismo, de modo que los que quieran pasar de
     aquí a
     vosotros, no puedan hacerlo; ni de ahí puedan pasar hacia nosotros.” <br>
-     Luc 16:27 «Replicó: “Pues entonces, te ruego, padre, que le envíes a la casa de mi padre, <br>
-     Luc 16:28 porque tengo cinco hermanos, para que les advierta y no vengan también ellos a este lugar de tormento.”
+    Luc 16:27 «Replicó: “Pues entonces, te ruego, padre, que le envíes a la casa de mi padre, <br>
+    Luc 16:28 porque tengo cinco hermanos, para que les advierta y no vengan también ellos a este lugar de tormento.”
     <br>
-     Luc 16:29 Abrahán le dijo: “Tienen a Moisés y a los profetas; que les oigan.” <br>
-     Luc 16:30 Él dijo: “No, padre Abrahán, que si alguno de entre los muertos va a ellos, se convertirán.” <br>
-     Luc 16:31 Le contestó: “Si no oyen a Moisés y a los profetas, tampoco se convencerán aunque un muerto resucite.”»
+    Luc 16:29 Abrahán le dijo: “Tienen a Moisés y a los profetas; que les oigan.” <br>
+    Luc 16:30 Él dijo: “No, padre Abrahán, que si alguno de entre los muertos va a ellos, se convertirán.” <br>
+    Luc 16:31 Le contestó: “Si no oyen a Moisés y a los profetas, tampoco se convencerán aunque un muerto resucite.”»
     <br>
-     Luc 20:38 No es un Dios de muertos, sino de vivos, porque para él todos viven.» <br>
-     te vendrá por este hecho.» <br>
-     1Sa 28:11 La mujer dijo: «¿A quién debo invocar para ti?» Respondió: «Evócame a Samuel.» <br>
-     <br>
-     1Sa 28:12 Vio entonces la mujer a Samuel y lanzó un gran grito. Dijo la mujer a Saúl: «¿Por qué me has engañado?
+    Luc 20:38 No es un Dios de muertos, sino de vivos, porque para él todos viven.» <br>
+    te vendrá por este hecho.» <br>
+    1Sa 28:11 La mujer dijo: «¿A quién debo invocar para ti?» Respondió: «Evócame a Samuel.» <br>
+    <br>
+    1Sa 28:12 Vio entonces la mujer a Samuel y lanzó un gran grito. Dijo la mujer a Saúl: «¿Por qué me has engañado?
     ¡Tú
     eres Saúl!» <br>
-     1Sa 28:13 El rey le dijo: «No temas, pero ¿qué has visto?» La mujer respondió a Saúl: «Veo un espectro que sube de
+    1Sa 28:13 El rey le dijo: «No temas, pero ¿qué has visto?» La mujer respondió a Saúl: «Veo un espectro que sube de
     la
     tierra.» <br>
-     1Sa 28:14 Saúl le preguntó: «¿Qué aspecto tiene?» Ella respondió: «Es un hombre anciano que sube envuelto en su
+    1Sa 28:14 Saúl le preguntó: «¿Qué aspecto tiene?» Ella respondió: «Es un hombre anciano que sube envuelto en su
     manto.» Comprendió Saúl que era Samuel y cayendo rostro en tierra se postró. <br>
-     <br>
-     1Sa 28:15 Samuel dijo a Saúl: «¿Por qué me perturbas evocándome?» Respondió Saúl: <br>
-     «Estoy en grande angustia; los filisteos mueven guerra contra mí, Dios se ha apartado de mí y ya no me responde ni
+    <br>
+    1Sa 28:15 Samuel dijo a Saúl: «¿Por qué me perturbas evocándome?» Respondió Saúl: <br>
+    «Estoy en grande angustia; los filisteos mueven guerra contra mí, Dios se ha apartado de mí y ya no me responde ni
     por
     los profetas ni en sueños. Te he llamado para que me indiques lo que debo hacer.» <br>
-     1Sa 28:16 Dijo Samuel: «¿Para qué me consultas si Yahvé se ha separado de ti y se ha convertido en tu enemigo?
+    1Sa 28:16 Dijo Samuel: «¿Para qué me consultas si Yahvé se ha separado de ti y se ha convertido en tu enemigo?
     <br>
-     1Sa 28:17 Yahvé ha cumplido lo que dijo por mi boca: ha arrancado Yahvé el reino de tu mano y se lo ha dado a
+    1Sa 28:17 Yahvé ha cumplido lo que dijo por mi boca: ha arrancado Yahvé el reino de tu mano y se lo ha dado a
     otro, a
     David, <br>
-     1Sa 28:18 porque no oíste la voz de Yahvé y no llevaste a cabo la indignación de su ira contra Amalec. Por eso te
+    1Sa 28:18 porque no oíste la voz de Yahvé y no llevaste a cabo la indignación de su ira contra Amalec. Por eso te
     trata hoy Yahvé de esta manera. <br>
-     1Sa 28:19 Y contigo entregará Yahvé también a todo Israel en manos de los filisteos. Mañana tú y tus hijos
+    1Sa 28:19 Y contigo entregará Yahvé también a todo Israel en manos de los filisteos. Mañana tú y tus hijos
     estaréis
     conmigo. Yahvé ha entregado también el ejército de Israel en manos de los filisteos.» <br>
-     <br>
-     1Sa 28:20 Al instante Saúl cayó en tierra cuan largo era. Estaba aterrado por las palabras de Samuel: se hallaba,
+    <br>
+    1Sa 28:20 Al instante Saúl cayó en tierra cuan largo era. Estaba aterrado por las palabras de Samuel: se hallaba,
     además, sin fuerzas, porque no había comido nada en todo el día y toda la noche. <br>
-     Mc 9,4 y Mt 17,1-9 <br>
-     Mat 17:1 Seis días después, toma Jesús consigo a Pedro, a Santiago y a su hermano Juan, y los lleva aparte, a un
+    Mc 9,4 y Mt 17,1-9 <br>
+    Mat 17:1 Seis días después, toma Jesús consigo a Pedro, a Santiago y a su hermano Juan, y los lleva aparte, a un
     monte
     alto. <br>
-     Mat 17:2 Y se transfiguró delante de ellos: su rostro se puso brillante como el sol y sus vestidos se volvieron
+    Mat 17:2 Y se transfiguró delante de ellos: su rostro se puso brillante como el sol y sus vestidos se volvieron
     blancos como la luz. <br>
-     Mat 17:3 En esto, se les aparecieron Moisés y Elías que conversaban con él. <br>
-     Jua 11:25 Jesús le respondió: “Yo soy la resurrección. El que cree en mí, aunque muera, vivirá; <br>
-     Jua 11:26 y todo el que vive y cree en mí, no morirá jamás. ¿Crees esto?» <br>
-     1Co 12:12 Pues del mismo modo que el cuerpo es uno, aunque tiene muchos miembros, y todos los miembros del cuerpo,
+    Mat 17:3 En esto, se les aparecieron Moisés y Elías que conversaban con él. <br>
+    Jua 11:25 Jesús le respondió: “Yo soy la resurrección. El que cree en mí, aunque muera, vivirá; <br>
+    Jua 11:26 y todo el que vive y cree en mí, no morirá jamás. ¿Crees esto?» <br>
+    1Co 12:12 Pues del mismo modo que el cuerpo es uno, aunque tiene muchos miembros, y todos los miembros del cuerpo,
     no
     obstante su pluralidad, no forman más que un solo cuerpo, así también Cristo. <br>
-     1Co 12:13 Porque en un solo Espíritu hemos sido todos bautizados, para no formar más que un cuerpo, judíos y
+    1Co 12:13 Porque en un solo Espíritu hemos sido todos bautizados, para no formar más que un cuerpo, judíos y
     griegos,
     esclavos y libres. Y todos hemos bebido de un solo Espíritu. <br>
-     1Co 12:14 Así también el cuerpo no se compone de un solo miembro, sino de muchos. <br>
-     <br>
+    1Co 12:14 Así también el cuerpo no se compone de un solo miembro, sino de muchos. <br>
     <br>
     <br>
     <br>
     <br>
     <br>
-     Pueden ellos interceder por nosotros <br>
-     Apo 6:9 Cuando abrió el quinto sello, vi debajo del altar las almas de los degollados a causa de la palabra de
+    <br>
+    Pueden ellos interceder por nosotros <br>
+    Apo 6:9 Cuando abrió el quinto sello, vi debajo del altar las almas de los degollados a causa de la palabra de
     Dios y
     del testimonio que mantuvieron. <br>
-     Apo 6:10 Se pusieron a gritar con fuerte voz: «¿Hasta cuándo, Dueño santo y veraz, vas a estar sin hacer justicia
+    Apo 6:10 Se pusieron a gritar con fuerte voz: «¿Hasta cuándo, Dueño santo y veraz, vas a estar sin hacer justicia
     y
     sin tomar venganza por nuestra sangre de los habitantes de la tierra?» <br>
     <br>
