--- a/historia/concilios/concilioNiceaI.html
+++ b/historia/concilios/concilioNiceaI.html
@@ -24,7 +24,7 @@
       <li class="li"><a href="#section2">BIOGRAFÍA DE ARRIO</a></li>
       <li class="li"><a href="#section3">BIOGRAFÍA DE ATANASIO</a></li>
       <li class="li"><a href="#section4">FUNDAMENTOS DE ARRIO</a></li>
-      <li class="li"><a href="#section5">fUNDAMENTOS CATÓLICOS</a></li>
+      <li class="li"><a href="#section5">FUNDAMENTOS CATÓLICOS</a></li>
     
     </ol>
   </section>
