--- a/liturgia/misa.html
+++ b/liturgia/misa.html
@@ -514,6 +514,116 @@
          En resumen:
         La Iglesia Católica tiene una rica diversidad de ritos eucarísticos, lo que refleja su carácter universal.
         </p>
+        <h2 class="subtitulo">LA PASCUA JUDÍA</h2>
+        <P>El ritual de la Pascua judía, conocido como Pésaj, es una de las festividades más importantes en el judaísmo. Conmemora la liberación de los israelitas de la esclavitud en Egipto, relatada en el libro del Éxodo. Se celebra durante ocho días (siete en Israel) a partir del 15 de Nisán, el primer mes del calendario hebreo. <br>
+
+ 1. Preparación para Pésaj <br>
+Antes de la festividad, los judíos deben preparar sus hogares para Pésaj de la siguiente manera: <br>
+- Eliminación del Jametz: El jametz es cualquier alimento que contenga levadura o haya fermentado (como pan, galletas, pasteles). Esto simboliza la rapidez con la que los israelitas salieron de Egipto, sin tiempo para que el pan fermentara. Los hogares son limpiados cuidadosamente para eliminar cualquier rastro de jametz. <br>
+- Compra de alimentos específicos: Durante Pésaj, los judíos solo consumen alimentos "Kasher para Pésaj", es decir, alimentos aprobados para la festividad, especialmente el matzá, un pan sin levadura. <br> <br>
+
+ 2. La Cena del Séder <br>
+El Séder de Pésaj es el ritual central de la festividad y se celebra en las dos primeras noches (en Israel, solo la primera noche). Es una cena ceremonial que sigue una estructura específica contenida en un texto llamado Hagadá, que relata la historia del Éxodo. El término *séder* significa "orden", y refleja el orden preciso de la celebración. <br> <br>
+
+Elementos del Séder <br>
+1. Plato del Séder (Keará): Un plato ceremonial con alimentos simbólicos:
+   - Zeróa: Un hueso asado que simboliza el sacrificio pascual ofrecido en el Templo. <br>
+   - Beitzá: Un huevo duro que simboliza la ofrenda festiva (hagigá) y la fragilidad de la vida. <br>
+   - Maror: Hierbas amargas, generalmente rábano picante, que simbolizan la amargura de la esclavitud. <br>
+   - Jazeret: Una segunda porción de hierbas amargas (lechuga romana), que también simboliza el sufrimiento en Egipto. <br>
+   - Karpás: Una verdura (generalmente perejil o apio) que se sumerge en agua salada, recordando las lágrimas de los israelitas. <br>
+   - Jaroset: Una mezcla dulce de frutas y nueces que representa el mortero que los israelitas usaban en su trabajo como esclavos. <br> <br>
+
+2. Matzá: El pan sin levadura que se consume durante el Séder y toda la semana de Pésaj. Se colocan tres piezas de matzá sobre la mesa del Séder y se utiliza en varios momentos de la celebración. <br> <br>
+
+3. Cuatro copas de vino: Durante el Séder se bebe vino en cuatro momentos específicos, que simbolizan las cuatro expresiones de redención mencionadas en Éxodo 6:6-7. <br> <br>
+
+4. Copa de Elías: Se coloca una quinta copa de vino en la mesa para el profeta Elías, quien, según la tradición, vendrá antes de la llegada del Mesías. <br> <br>
+
+# El Ritual del Séder <br>
+1. Kadesh: Se recita la bendición sobre el vino, y se toma la primera copa.
+2. Urjatz: Lavado de las manos sin recitar una bendición. <br>
+3. Karpás: Se sumerge el karpás en agua salada y se come. <br>
+4. Yajatz: La matzá del medio se parte en dos. Una mitad se reserva como el *afikoman*, que se comerá al final de la comida. <br>
+5. Maguid: Se narra la historia del Éxodo de Egipto. Se recitan las famosas "Cuatro Preguntas" (*Mah Nishtaná*) hechas por los niños para preguntar por qué esta noche es diferente de todas las demás. Aquí se relata la historia del Éxodo y se canta la canción Dayenu. <br>
+6. Rachtzá: Se lavan las manos antes de comer la matzá, esta vez con una bendición. <br>
+7. Motzí Matzá: Se recita una bendición sobre la matzá y se come. <br>
+8. Maror: Se recita la bendición sobre las hierbas amargas y se comen, a menudo junto con jaroset. <br>
+9. Korej: Se come un sándwich de matzá con maror, siguiendo la costumbre de Hillel. <br>
+10. Shulján Orej: Se sirve la comida festiva. <br>
+11. Tzafún: Se encuentra y se come el afikoman, la pieza de matzá escondida al principio. <br>
+12. Barej: Se recita la bendición después de la comida, y se toma la tercera copa de vino. <br>
+13. Hallel: Se recitan los salmos de alabanza (Salmos 113-118), y se bebe la cuarta copa de vino. <br>
+14. Nirtzá: Se concluye el Séder con la esperanza de que el próximo año se celebre en Jerusalén, y se canta la canción Had Gadya. <br> <br>
+
+ 3. El resto de Pésaj <br>
+Después del Séder, la festividad continúa con restricciones alimentarias similares durante los siguientes días. Se realiza una limpieza continua de jametz, y no se consume ningún producto fermentado. Durante estos días, también hay lecturas especiales en las sinagogas, como la lectura del Cantar de los Cantares. <br>
+
+Pésaj es una festividad tanto religiosa como comunitaria, que reafirma la libertad y la redención divina del pueblo judío.</P>
+
+<h2 class="subtitulo">las 4 preguntas</h2>
+<p>Las Cuatro Preguntas (Mah Nishtaná) son una parte central de la cena de Séder de Pésaj, y son tradicionalmente formuladas por los niños presentes para destacar las diferencias entre la noche de Pésaj y las demás noches del año. Las preguntas se recitan al comienzo del Maguid, la parte del Séder donde se relata la historia del Éxodo. El objetivo es estimular la curiosidad y el aprendizaje sobre el significado de la Pascua judía.<br><br>
+
+  Estas son las Cuatro Preguntas, tanto en hebreo como en español:<br><br>
+  
+   1. ¿Por qué esta noche comemos solo matzá (pan sin levadura) y no pan común?
+  Hebreo: <br>
+  Shebechol haleilot anu ochlin chametz u'matzá; halaila hazeh kulo matzá.
+  Español:<br><br>
+  En todas las demás noches comemos tanto pan con levadura como pan sin levadura. ¿Por qué esta noche solo comemos matzá?<br><br>
+  
+   2. ¿Por qué esta noche comemos maror (hierbas amargas) y no otras verduras?
+  Hebreo: <br>
+  Shebechol haleilot anu ochlin shear yerakot; halaila hazeh maror.
+  Español:<br>
+  En todas las demás noches comemos otras verduras. ¿Por qué esta noche comemos maror?<br><br>
+  
+   3. ¿Por qué esta noche sumergimos las verduras dos veces?
+  Hebreo: <br>
+  Shebechol haleilot ein anu matbilin afilu pa'am echat; halaila hazeh shetei peamim.<br>
+  Español:<br>
+  En todas las demás noches no sumergimos los alimentos ni una sola vez. ¿Por qué esta noche los sumergimos dos veces? (Generalmente, el karpás en agua salada y el maror en jaroset).<br><br>
+  
+   4. ¿Por qué esta noche comemos reclinados en lugar de sentados normalmente?
+  Hebreo: <br>
+  Shebechol haleilot anu ochlin bein yoshvin u'vein mesubin; halaila hazeh kulanu mesubin.<br>
+  Español:<br>
+  En todas las demás noches comemos sentados o reclinados. ¿Por qué esta noche comemos todos reclinados?<br><br>
+  
+   Significado de las Cuatro Preguntas<br>
+  Las preguntas están diseñadas para que los niños y los participantes reflexionen sobre las diferencias y el simbolismo de la cena de Pésaj. Cada una de estas acciones especiales (comer matzá, hierbas amargas, mojar las verduras y reclinarse) está conectada con los eventos del Éxodo y conmemora la liberación de la esclavitud en Egipto.
+  </p>
+
+  <h3 class="cita">BENDICIONES DEL PAN Y VINO EN EL PESAJ</h3>
+  <p>En la bendición del pan y del vino durante la cena de Pésaj (y otras festividades judías), se recitan dos bendiciones tradicionales antes de consumir estos alimentos. Estas bendiciones son parte esencial del ritual judío y reflejan gratitud a Dios por los dones recibidos. Las bendiciones son las siguientes: <br> <br>
+
+    1. Bendición sobre el pan (matzá) <br>
+   Antes de comer el pan sin levadura (matzá) en la cena del Séder, se recita la siguiente bendición: <br> <br>
+   
+   Hebreo: <br>
+   בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, הַמּוֹצִיא לֶחֶם מִן הָאָרֶץ. <br>
+   
+   Transliteración: <br>
+   Baruj Atá Adonai Eloheinu Mélej Ha'olam, haMotzí lejem min haáretz. <br> <br>
+   
+   Traducción: <br>
+   Bendito eres Tú, Señor nuestro Dios, Rey del universo, que sacas pan de la tierra. <br> <br>
+   
+    2. Bendición sobre el vino <br>
+   Antes de beber la primera copa de vino (o jugo de uva), se recita la bendición: <br> <br>
+   
+   Hebreo: <br>
+   בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, בּוֹרֵא פְּרִי הַגָּפֶן. <br> <br>
+   
+   Transliteración: <br>
+   Baruj Atá Adonai Eloheinu Mélej Ha'olam, Boré Pri Hagáfen. <br> <br>
+   
+   Traducción: <br>
+   Bendito eres Tú, Señor nuestro Dios, Rey del universo, creador del fruto de la vid. <br> <br>
+   
+   Estas bendiciones no solo son una expresión de agradecimiento, sino que también reflejan la profunda conexión entre la comida, la bebida y la gratitud hacia Dios por Su provisión y cuidado. En la cena del Séder, estas bendiciones adquieren un significado especial, al estar relacionadas con la redención del pueblo judío de la esclavitud en Egipto.
+   </p>
+
 </section>
 <!-- /////////////////////////////////////// -->
 <section id="despedida">
@@ -610,7 +720,7 @@ El uso de "missa" en este contexto litúrgico refleja la misión que los fieles 
 </section>
 <!-- /////////////////////////////////////// -->
  <section id="ocarm">
-  <!-- *************************************** -->
+  <!-- ************************************** -->
   <h2 class="subtitulo">LITURGIA DE LA PALABRA</h2>
 <p>
   LITURGIA DE LA PALABRA         		 IGMR 55-71 <br>
