--- a/salud/MedidasCarlos.html
+++ b/salud/MedidasCarlos.html
@@ -4,7 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>APOLOGETICA</title>
+  <title>SALUD</title>
+  <style>
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    th, td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: center;
+    }
+    th {
+        background-color: #f2f2f2;
+    }
+    div{
+      display: contents;
+    }
+    .a{
+      border: brown 2px solid;
+      padding: 0.5em;
+      margin-right: 1em;
+    }
+    .control{
+      border: brown 4px double;
+      padding: 1em;
+    }
+
+    .var{
+      background-color: peru;
+      color: white;
+    }
+</style>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -17,11 +48,11 @@
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
-     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
-          <br>EDITH STEIN</i></b></h3>
+    <h1 class="init">CONTROL</h1>
+     <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de la Verdad"
+          <br>EDITH STEIN</h3>
 
- 
+
     <!-- ****************************************************************** -->
 
     <section id="00">
@@ -29,40 +60,33 @@
       <h1> MEDIDAS</h1>
       <div>
         <ol>
-          <li class="li"><a href="../liturgia/misa.html">MISA- MISAL ROMANO</a></li>
+          <li class="li"><a href="#2024">2024</a></li>
 
         </ol>
+      </section>
+ <section class="control">
+    <h2>MEDICIONES</h2>
+      <div ><a href="" class="a">GLUCOSA</a></div>
+      <div ><a href="./PresionSis.html" class="a var">PRESIÓN SISTÓLICA</a></div>
+      <div ><a href="" class="a">PRESIÓN SIASTOLICA</a></div>
+      <div ><a href="" class="a">PULSO</a></div>
+      <div ><a href="" class="a">TEMPERATURA</a></div>
+      <div ><a href="" class="a">OXIGENACIÓN</a></div>
+      <div ><a href="" class="a">PESO</a></div>
+ </section> <br>
+ <section class="control">
+  <h2>VARIABLES </h2>
+  <div ><a href="./Ejercicios.html" class="a">EJERCICIO</a></div>
+  <div><a href="" class="a"></a></div>
+  <div><a href="" class="a"></a></div>
+  <div><a href="" class="a"></a></div>
+ </section>
 
-      </div>
-    </section>
+   
     <!-- ****************************************************************** -->
-    <section id="01">
-      <h2></h2>
-      <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <section id="2024">
     <title>Tabla de Mediciones</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: center;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-
 <h2>Registro de Mediciones 2024</h2>
-
 <table>
     <thead>
         <tr>
@@ -120,7 +144,7 @@
             <td>36.3</td> <!-- Temperatura (°C)  -->
             <td>98</td> <!--Oxigenación (%)  -->
             <td></td> <!-- Peso (kg)  -->
-            <td>La presión ha pasado de 120</td> <!-- Observaciones  -->
+            <td>Presión 124</td> <!-- Observaciones  -->
         </tr>
         <tr>
             <td>27.06</td> <!--Fecha   -->
@@ -145,6 +169,17 @@
             <td></td> <!-- Observaciones -->
         </tr>
         <tr>
+            <td>13.10</td> <!--Fecha   -->
+            <td>99</td> <!--Glucosa (mg/dL)  -->
+            <td>122</td> <!--Presión Sistólica (mmHg) -->
+            <td>73</td> <!--Presión Diastólica (mmHg)  -->
+            <td>56</td> <!-- Pulso (bpm)  -->
+            <td></td> <!-- Temperatura (°C)  -->
+            <td>99</td> <!--Oxigenación (%)  -->
+            <td></td> <!-- Peso (kg)  -->
+            <td>Presión 122</td> <!-- Observaciones -->
+        </tr>
+        <tr>
             <td></td> <!--Fecha   -->
             <td></td> <!--Glucosa (mg/dL)  -->
             <td></td> <!--Presión Sistólica (mmHg) -->
@@ -153,7 +188,18 @@
             <td></td> <!-- Temperatura (°C)  -->
             <td></td> <!--Oxigenación (%)  -->
             <td></td> <!-- Peso (kg)  -->
-            <td></td> <!-- Observaciones -->
+            <td></td> <!--Observaciones  -->
+        </tr>
+        <tr>
+            <td></td> <!--Fecha   -->
+            <td></td> <!--Glucosa (mg/dL)  -->
+            <td></td> <!--Presión Sistólica (mmHg) -->
+            <td></td> <!--Presión Diastólica (mmHg)  -->
+            <td></td> <!-- Pulso (bpm)  -->
+            <td></td> <!-- Temperatura (°C)  -->
+            <td></td> <!--Oxigenación (%)  -->
+            <td></td> <!-- Peso (kg)  -->
+            <td></td> <!--Observaciones  -->
         </tr>
         <tr>
             <td></td> <!--Fecha   -->
