--- a/salud/index.html
+++ b/salud/index.html
@@ -12,14 +12,11 @@
 do {
   numero = prompt("Ingresa la clave ");
   numero = Number(numero);
-
   if (numero !== 2607) {
     alert("Número incorrecto. Intenta de nuevo.");
   }
 } while (numero !== 2607);
-
 alert("¡Correcto! Ingresaste el número 2607.");
-
 </script>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -32,7 +29,7 @@ alert("¡Correcto! Ingresaste el número 2607.");
       </div>
     </header> <br><br>
     <!-- ****************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
+    <h1 class="init">CONTROL</h1>
      <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
 
@@ -45,7 +42,7 @@ alert("¡Correcto! Ingresaste el número 2607.");
       <div>
         <ol>
           <li class="li"><a href="/BlockGkc.html">BLOCK GKC</a></li>
-          <li class="li"><a href="./salud/MedidasCarlos.html">CONTROL</a></li>
+          <li class="li"><a href="./MedidasCarlos.html">CONTROL</a></li>
           <li class="li"><a href="./Alimentos.html">CONSTANTES VITALES</a></li>
 
         </ol>
