--- a/oracion/TestigosDFe.html
+++ b/oracion/TestigosDFe.html
@@ -32,6 +32,7 @@
       <li class="li"><a href="./Kadosh.html">KADOSH</a></li>
       <li class="li"><a href="./Hagiostes.html">HAGIOSTES</a></li>
       <li class="li"><a href="./Sanctitas.html">SANCTITAS</a></li>
+      <li class="li"><a href="./AdvocacionesMarianas.html">ADVOCACIONES MARIANAS</a></li>
 
     </ol>
 
